--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-      <div id="root"></div>
+      <main>
+            <div id="root"></div>
+      </main>
       <script type="module"
               src="/src/main.jsx"></script>
 </body>
